Fix first gibson diamond in page issue on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -92,3 +92,10 @@
 	text-align: center;
 	color: white;
 }
+
+.only-desktop {
+	display: none;
+	@media (min-width: 1024px) {
+		display: block;
+	}
+}
